[S06P22A404-240] detail: fix NFTCard alignment

--- a/doners-frontend/src/containers/ProfilePage/ProfileDetail/ProfileDetail.module.scss
+++ b/doners-frontend/src/containers/ProfilePage/ProfileDetail/ProfileDetail.module.scss
@@ -6,6 +6,7 @@
   margin-top: -80px;
   border: 2px solid $black;
   padding: 50px;
+  display: flex;
   .article-header {
     margin-bottom: 50px;
   }
